--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "basicgrid": "^3.1.2",
+    "formbase": "^11.0.0",
     "js-cookie": "^2.2.1",
     "mdn-polyfills": "^5.18.0",
     "normalize.css": "^8.0.1",
