--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "basicgrid": "^3.1.2",
+    "casual": "^1.6.2",
     "formbase": "^11.0.0",
     "js-cookie": "^2.2.1",
     "mdn-polyfills": "^5.18.0",
